addition char driver program updated

--- a/char_drivers/QUESTION_4/Makefile
+++ b/char_drivers/QUESTION_4/Makefile
@@ -1,8 +1,6 @@
-##ifneq($(KERNELRELEASE),)
 obj-m := CharDriver_4.o
 
-##else
-KERNELDIR = /lib/modules/$(shell uname -r)/build
+KERNELDIR = /lib/modules/$(shell uname -r)/build/
 PWD := $(shell pwd)
 
 default:
@@ -10,7 +8,6 @@ default:
 	gcc -o Application_4 Application_4.c
 clean:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) clean
-	rm Application_4
+	rm -rf Application_4
 install:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules_install
-#endif
